# refer

./: README.md
src/: CMakeLists.txt
src/compan_logger/: CMakeLists.txt  compan_logger.cpp  compan_logger.h  compan_logger_binder.cpp  compan_logger_binder.h  compan_logger_controller.cpp  compan_logger_controller.h  compan_logger_dispatcher.cpp  compan_logger_dispatcher.h  compan_logger_dispatcher_asio.cpp  compan_logger_dispatcher_asio.h  compan_logger_format_helper.cpp  compan_logger_format_helper.h  compan_logger_loglevel.cpp  compan_logger_loglevel.h  compan_logger_sink.cpp  compan_logger_sink.h  compan_logger_sink_buffered.cpp  compan_logger_sink_buffered.h  compan_logger_sink_cout.cpp  compan_logger_sink_cout.h  compan_logger_sink_syslog.cpp  compan_logger_sink_syslog.h  compan_logger_stream.cpp  compan_logger_stream.h
src/company_ref_asio/: CMakeLists.txt  company_ref_asio_connection.cpp  company_ref_asio_connection.h  company_ref_asio_msg_handler.cpp  company_ref_asio_msg_handler.h  company_ref_asio_msg_handler_factory.cpp  company_ref_asio_msg_handler_factory.h  company_ref_asio_server.cpp  company_ref_asio_server.h  company_ref_asio_tcp_connection.cpp  company_ref_asio_tcp_connection.h  company_ref_asio_tcp_server.cpp  company_ref_asio_tcp_server.h  company_ref_asio_uds_connection.cpp  company_ref_asio_uds_connection.h  company_ref_asio_uds_server.cpp  company_ref_asio_uds_server.h
src/company_ref_asio_protocol_client/: CMakeLists.txt  company_ref_asio_client_protocol_handler.cpp  company_ref_asio_client_protocol_handler.h  company_ref_asio_client_protocol_serializer.cpp  company_ref_asio_client_protocol_serializer.h  company_ref_asio_tcp_protocol_client.cpp  company_ref_asio_tcp_protocol_client.h  company_ref_asio_uds_protocol_client.cpp  company_ref_asio_uds_protocol_client.h
src/company_ref_asio_protocol_server/: CMakeLists.txt  company_ref_asio_server_msg_handler_factory.cpp  company_ref_asio_server_msg_handler_factory.h  company_ref_asio_server_protocol_handler.cpp  company_ref_asio_server_protocol_handler.h  company_ref_asio_server_protocol_serializer.cpp  company_ref_asio_server_protocol_serializer.h
src/company_ref_boost_client/: CMakeLists.txt  company_ref_boost_client.cpp  company_ref_boost_client.h  company_ref_boost_tcp_client.cpp  company_ref_boost_tcp_client.h  company_ref_boost_uds_client.cpp  company_ref_boost_uds_client.h
src/company_ref_boost_server/: CMakeLists.txt  company_ref_boost_handler_factory.cpp  company_ref_boost_handler_factory.h  company_ref_boost_message_handler.cpp  company_ref_boost_message_handler.h  company_ref_boost_server.cpp  company_ref_boost_server.h  company_ref_boost_server_connection.cpp  company_ref_boost_server_connection.h  company_ref_boost_server_connection_manager.cpp  company_ref_boost_server_connection_manager.h  company_ref_boost_tcp_server.cpp  company_ref_boost_tcp_server.h  company_ref_boost_uds_server.cpp  company_ref_boost_uds_server.h  company_ref_boost_ws_handler_factory.cpp  company_ref_boost_ws_handler_factory.h  company_ref_boost_ws_message_handler.cpp  company_ref_boost_ws_message_handler.h
src/company_ref_cli/: CMakeLists.txt  company_ref_cli_bl.cpp  company_ref_cli_bl.h  company_ref_cli_command.cpp  company_ref_cli_command.h  company_ref_cli_command_status.h  company_ref_cli_container.cpp  company_ref_cli_container.h  company_ref_cli_invoke.cpp  company_ref_cli_invoke.h  company_ref_cli_main.cpp  company_ref_cli_output.cpp  company_ref_cli_output.h  company_ref_value_io_helper.cpp  company_ref_value_io_helper.h
src/company_ref_dmo/: CMakeLists.txt  company_ref_dmo_container.cpp  company_ref_dmo_container.h  company_ref_dmo_file.cpp  company_ref_dmo_file.h  company_ref_dmo_helper.cpp  company_ref_dmo_helper.h
src/company_ref_dynamic_dmo/: CMakeLists.txt  company_ref_dynamic_dmo_controller.cpp  company_ref_dynamic_dmo_controller.h  company_ref_dynamic_dmo_load_actions.cpp  company_ref_dynamic_dmo_load_actions.h  company_ref_dynamic_dmo_loader.cpp  company_ref_dynamic_dmo_loader.h  company_ref_dynamic_dmo_manager.cpp  company_ref_dynamic_dmo_manager.h
src/company_ref_main_apps/: CMakeLists.txt  compan_edge_app_options.cpp  compan_edge_app_options.h  compan_edge_main_io_context.cpp  compan_edge_main_io_context.h  compan_logger_binder_variantvalue.cpp  compan_logger_binder_variantvalue.h  compan_logger_factory.cpp  compan_logger_factory.h
src/company_ref_microservice/: CMakeLists.txt  company_ref_microservice_client.cpp  company_ref_microservice_client.h  company_ref_microservice_connection.cpp  company_ref_microservice_connection.h  company_ref_microservice_dynamic_dmo.cpp  company_ref_microservice_dynamic_dmo.h  company_ref_microservice_message_handler.cpp  company_ref_microservice_message_handler.h
src/company_ref_ms_manager/: CMakeLists.txt  company_ref_ms_applet.cpp  company_ref_ms_applet.h  company_ref_ms_controller.cpp  company_ref_ms_controller.h  company_ref_ms_manager_main.cpp
src/company_ref_ms_test/: CMakeLists.txt  company_ref_ms_test_main.cpp  ms_test_microservice.cpp  ms_test_microservice.h  test_base.cpp  test_base.h  test_container.cpp  test_container.h  test_subscribe.cpp  test_subscribe.h
src/company_ref_persistor/: CMakeLists.txt  company_ref_persistor_bl.cpp  company_ref_persistor_bl.h  company_ref_persistor_client.cpp  company_ref_persistor_client.h  company_ref_persistor_main.cpp
src/company_ref_protocol/: CMakeLists.txt  compan.proto  company_ref_datamodel.proto  company_ref_protocol.proto
src/company_ref_tcpserver/: CMakeLists.txt  company_ref_tcp_handler_factory.cpp  company_ref_tcp_handler_factory.h  company_ref_tcp_message_handler.cpp  company_ref_tcp_message_handler.h  company_ref_tcpserver.cpp  company_ref_tcpserver.h  company_ref_tcpserver_main.cpp  company_ref_uds_message_handler.cpp  company_ref_uds_message_handler.h
src/company_ref_variant_valuestore/: CMakeLists.txt  company_ref_variant_bool_value.cpp  company_ref_variant_bool_value.h  company_ref_variant_llinterval_value.cpp  company_ref_variant_llinterval_value.h  (+47 more)
tests/: CMakeLists.txt
(+100 files in other folders)
