add_subdirectory(Compan_logger)
add_subdirectory(company_ref_asio)
add_subdirectory(company_ref_asio_protocol_server)
add_subdirectory(company_ref_protocol_utils)
add_subdirectory(company_ref_variant_valuestore)
add_subdirectory(company_ref_dmo)
add_subdirectory(dmo_tools_utils)
add_subdirectory(company_ref_dynamic_dmo)
add_subdirectory(company_ref_boost_server)
add_subdirectory(company_ref_microservice)
add_subdirectory(company_ref_main_apps)